--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,36 +1,42 @@
 .container {
-  min-height: 100vh;
   padding: 0 0.5rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh;
 }
 
 .main {
-  padding: 5rem 0;
-  flex: 1;
+  height:100%;
+  width:100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  //background: #0F2027;  /* fallback for old browsers */
+  //background: -webkit-linear-gradient(to right, #2C5364, #203A43, #0F2027);  /* Chrome 10-25, Safari 5.1-6 */
+  //background: linear-gradient(to right, #2C5364, #203A43, #0F2027); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+.buttonCards {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
 .footer {
-  width: 100%;
-  height: 100px;
+  display: flex;
+  flex-direction: row;
   border-top: 1px solid #eaeaea;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
+  div {
+    padding: 20px;
+  }
+  a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-grow: 1;
+  }
 }
 
 .title a {
@@ -74,8 +80,6 @@
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-  max-width: 800px;
-  margin-top: 3rem;
 }
 
 .card {
@@ -87,7 +91,6 @@
   border: 1px solid #eaeaea;
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
-  width: 45%;
 }
 
 .card:hover,
