--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,8 +1,14 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Martel&family=Raleway:wght@300;500&display=swap');
+
+
 html,
 body {
+  min-height: 100vh;
+  overflow-x: hidden;
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+  font-family: 'Martel', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
