--- a/ui/Navigation/Navigation.module.scss
+++ b/ui/Navigation/Navigation.module.scss
@@ -1,21 +1,23 @@
 $glow-bg: radial-gradient( circle at 631.27px 4.12244px, #0141FF55, #0000000f );
 
 .navigationContainer {
-  height: 100px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  z-index:10;
   width: 100%;
+  z-index: 10;
+  display: flex;
+  justify-content: center;
+  position: sticky;
+  height: 100px;
+  background-color: #fafafa;
 }
 
 .navigation {
+  height: 100%;
   display: flex;
-  flex-direction: row;
   justify-content: center;
-align-items: center;
+  flex-direction: row;
   ul {
     padding: 0;
+    margin: 0;
   }
 }
 
