--- a/ui/Card.module.scss
+++ b/ui/Card.module.scss
@@ -1,5 +1,9 @@
 @import "../styles/breakpoints";
 
+@mixin shadow() {
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+}
+
 @keyframes scaleDown {
   from {
     opacity: 0.5;
@@ -14,46 +18,45 @@
 
 @keyframes slideInFromBottom {
   0% {
-    bottom: 150px;
+    bottom: 80px;
   }
   100% {
-    bottom: 220px;
-  }
-}
-
-@keyframes happyHover {
-  from {
-
-  }
-
-  to {
-
+    bottom: 50px;
   }
 }
 
 .hero {
-  width: 100%;
-  animation: 500ms ease-out scaleDown;
-  box-shadow: rgba(0, 0, 0, 0.15) 0px 3px 3px 0px;
-  height: 600px;
+  position: relative;
 
   &__imageWrap {
-    position: relative;
     width: 100%;
+    animation: 500ms ease-out scaleDown;
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 3px 3px 0px;
+
     img {
       width: 100vw;
-      height: 600px;
+      @include desktop-up {
+        height: 700px;
+      }
+
     }
   }
 
   &__content {
-    position: relative;
-    animation: 900ms ease slideInFromBottom;
+    position: absolute;
+    animation: 0.5s linear slideInFromBottom;
     color: white;
     display: flex;
     flex-direction: column;
-    left: 50px;
-    bottom: 220px;
+    left:20px;
+    bottom: 50px;
+
+    @include mobile-up {
+      font-size: 0.5em;
+    }
+    @include desktop-up {
+      font-size: 1.0em;
+    }
   }
 
   &__ctaContainer {
@@ -75,10 +78,11 @@
       }
     }
   }
+
 }
 
 .card {
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+  @include shadow();
   display: flex;
   justify-content: space-between;
   flex-direction: column;
@@ -95,22 +99,20 @@
 
   @include small-desktop {
     width: 350px;
-    height: 500px;
+    height: 350px;
     }
 
   @include mid-desktop {
-    width: 400px;
-    height: 600px;
+    width: 350px;
+    height: 350px;
   }
 
   @include large-desktop {
-    width: 350px;
+    width: 500px;
     height: 500px;
   }
 
   @include desktop-up{
-    width: 500px;
-    height: 600px;
     &:hover {
       transform: translateY(-10px);
     }
@@ -118,24 +120,16 @@
 
 
   &__image {
+    position: relative;
     align-self: center;
-    @include mobile {
-      width: 300px;
-      height: 200px;
-    }
-    @include tablet {
-      width: 300px;
-      height: 200px;
-    }
-    @include desktop-up {
-      width: 600px;
-      height: 300px;
-    }
-
+    width:inherit;
+    height: inherit;
   }
 
   &__content {
+    position: absolute;
     padding: 20px;
+    bottom: 0;
   }
 
   &:hover &__line {
@@ -157,4 +151,54 @@
     background: -webkit-linear-gradient(to right, #185a9d, #43cea2);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #185a9d, #43cea2); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   }
+}
+
+.roundCard {
+  margin: 20px;
+  transition: all 0.3s ease;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  img {
+    @include shadow();
+    border-radius: 1000px;
+    width: 200px;
+    height: 200px;
+
+    @include mobile-up {
+      width: 300px;
+      height: 300px;
+    }
+
+    @include tablet-up {
+      width: 200px;
+      height: 200px;
+    }
+
+    @include mid-desktop {
+      width: 300px;
+      height: 300px;
+    }
+
+    @include large-desktop {
+      width: 400px;
+      height: 400px;
+    }
+  }
+
+
+
+  @include desktop-up{
+    &:hover {
+      transform: translateY(-10px);
+    }
+  }
+
+  &__text {
+    align-self: center;
+    text-align: center;
+  }
+
 }
