--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,4 @@
-
-@import url('https://fonts.googleapis.com/css2?family=Martel&family=Raleway:wght@300;500&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Martel&family=Poppins:wght@300;400&family=Raleway:wght@300;500&display=swap');
 
 html,
 body {
@@ -8,7 +6,7 @@ body {
   overflow-x: hidden;
   padding: 0;
   margin: 0;
-  font-family: 'Martel', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+  font-family: 'Poppins', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
