--- a/ui/Navigation/Navigation.module.scss
+++ b/ui/Navigation/Navigation.module.scss
@@ -1,3 +1,5 @@
+@import "../../styles/breakpoints.scss";
+
 $glow-bg: radial-gradient( circle at 631.27px 4.12244px, #0141FF55, #0000000f );
 
 .navigationContainer {
@@ -33,7 +35,10 @@ $glow-bg: radial-gradient( circle at 631.27px 4.12244px, #0141FF55, #0000000f );
 
 
 .navMenu {
-  width:200px;
+  @include desktop-up {
+    width:150px;
+  }
+
   text-align: center;
   padding-top: 20px;
   padding-bottom: 20px;
