update cards and general housekeeping

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -44,7 +44,9 @@
 }
 
 .footer {
+  bottom: 0;
   display: flex;
+  justify-content: center;
   flex-direction: row;
   border-top: 1px solid #eaeaea;
   div {
