--- a/styles/utils.scss
+++ b/styles/utils.scss
@@ -1,3 +1,5 @@
 @mixin shadow() {
   box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
 }
+
+$glow-bg: radial-gradient( circle at 631.27px 4.12244px, #0141FF55, #0000000f );
