--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Martel&family=Poppins:wght@300;400&family=Raleway:wght@300;500&display=swap');
 
+h1 {
+  text-align: center;
+}
+
 html,
 body {
   min-height: 100vh;
