--- a/ui/Navigation/Navigation.module.scss
+++ b/ui/Navigation/Navigation.module.scss
@@ -212,7 +212,6 @@
 
 .hamburger {
   top: -5px;
-  z-index: 110;
   width: 30px;
   height: 30px;
   position: relative;
@@ -271,29 +270,37 @@
   left: 13.5px;
 
 }
+.hamburgerButton {
+  background: transparent;
+  border: none;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+}
 
-.checkbox:checked + label > .hamburger > .bar1{
+.buttonClicked + label > .hamburger > .bar1{
   top: 13.5px;
   background-color: transparent;
 }
 
-.checkbox:checked + label > .hamburger > .bar2{
+.buttonClicked + label > .hamburger > .bar2{
   left: 0px;
   width: 30px;
   transform: rotate(45deg);
 }
 
-.checkbox:checked + label > .hamburger > .bar3{
+.buttonClicked + label > .hamburger > .bar3{
   left: 0;
   width: 30px;
   transform: rotate(-45deg);
 }
 
-.checkbox:checked + label > .hamburger > .bar4{
+.buttonClicked + label > .hamburger > .bar4{
   background-color: transparent;
 }
 
-.checkbox:checked + label > .hamburger > .bar5{
+.buttonClicked + label > .hamburger > .bar5{
   bottom: 13.5px;
   background-color: transparent;
 }
