--- a/ui/Card.module.scss
+++ b/ui/Card.module.scss
@@ -24,22 +24,25 @@
 
 .hero {
   position: relative;
+  min-width: 100%;
 
-  &__imageWrap {
+  &__videoWrap {
     width: 100%;
     animation: 500ms ease-out scaleDown;
     box-shadow: rgba(0, 0, 0, 0.15) 0px 3px 3px 0px;
 
-    img {
-      width: 100vw;
+    video {
+      object-fit: cover;
       @include desktop-up {
         height: 700px;
+        min-width: 100%;
       }
-
     }
   }
 
   &__content {
+    padding: 20px;
+    background-color: rgba(0,30,20,0.3);
     position: absolute;
     animation: 0.5s linear slideInFromBottom;
     color: white;
@@ -51,6 +54,10 @@
   }
 
   &__ctaContainer {
+    background-color: rgba(0,30,20,0.3);
+    padding:20px;
+    border: 2px solid white;
+    border-radius: 100px;
     visibility: inherit;
     opacity: 1;
     transform: matrix(1, 0, 0, 1, 0, 0);
