--- a/ui/Card.module.scss
+++ b/ui/Card.module.scss
@@ -83,10 +83,13 @@
   @include autoFontSize(18);
   text-transform: uppercase;
   font-weight: bolder;
+
   &:hover{
     opacity: 0.6;
   }
+
   @include shadow();
+
   display: flex;
   justify-content: space-between;
   flex-direction: column;
@@ -101,14 +104,14 @@
     height: 300px;
   }
 
-  @include small-desktop {
-    width: 300px;
-    height: 300px;
-    }
+  @include tablet-up {
+    width: 200px;
+    height: 200px;
+  }
 
   @include mid-desktop {
-    width: 350px;
-    height: 350px;
+    width: 300px;
+    height: 300px;
   }
 
   @include large-desktop {
