--- a/ui/Button.module.scss
+++ b/ui/Button.module.scss
@@ -1,19 +1,23 @@
 @import "styles/utils";
 
 .enquiryButton {
-  @include autoFontSize(20);
+  @include autoFontSize(15);
   &:hover {
     background-image: $glow-bg;
   }
+
   font-weight: bolder;
   text-transform: capitalize;
   z-index: 100;
-  top:30px;
+  top:60px;
   right: 20px;
   border: 2px solid black;
   background-color: white;
   border-radius: 100px;
-  padding: 10px 30px;
+  padding: 5px;
   cursor: pointer;
   outline: inherit;
+  a {
+    padding:20px;
+  }
 }
