--- a/styles/Layout.module.scss
+++ b/styles/Layout.module.scss
@@ -1,6 +1,15 @@
 @import "../styles/breakpoints.scss";
+@import "../styles/utils";
+
+
 
 .header {
+  h1 {
+    @include autoFontSize(40);
+    padding: 0;
+    margin: 0;
+
+  }
   display: flex;
   width: 100%;
   background-color: white;
@@ -8,30 +17,30 @@
   flex-direction: row;
   justify-content: center;
 
+  &__certification {
+    display: flex;
+    position: absolute;
+    left: 100px;
+    margin-top: 15px;
+    @include mobile {
+      display: none;
+    }
+  }
+
   &__content {
     width: 100%;
     display: flex;
     flex-direction: column;
     align-self: center;
+    align-items: center;
     font-size: 1.5rem;
+    justify-content: center;
 
-    h1{
-      margin-bottom: 10px;
-      margin-top: 0;
-    }
-
-    &__imageContainer {
-      width: 100%;
-      align-self: center;
-      display: flex;
-      flex-direction: row;
-      justify-content: space-around;
-
-      &__yogaAlliance{
-        margin: 20px;
+    &__certification {
+      @include tablet-up {
+        display: none;
       }
     }
-
   }
 
   &__enquiry {
@@ -45,7 +54,6 @@
 .main {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
 }
 
