--- a/ui/Button.module.scss
+++ b/ui/Button.module.scss
@@ -1,4 +1,5 @@
 @import "styles/utils";
+@import "styles/breakpoints";
 
 .enquiryButton {
   @include autoFontSize(15);
@@ -9,7 +10,7 @@
   font-weight: bolder;
   text-transform: capitalize;
   z-index: 100;
-  top:60px;
+  margin-top:10px;
   right: 20px;
   border: 2px solid black;
   background-color: white;
