show ganges photo on mobile and tablet

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -12,6 +12,17 @@
   display: flex;
   width: 100vw;
   transition: opacity .3s ease-in-out,visibility .3s ease-in-out;
+  &__hero {
+    width: 100%;
+    @include mobile {
+      display: none;
+    }
+  }
+  &__placeholderImage {
+    @include tablet-up {
+      display: none;
+    }
+  }
 }
 
 .buttonCards {
