--- a/styles/Layout.module.scss
+++ b/styles/Layout.module.scss
@@ -1,11 +1,9 @@
 @import "../styles/breakpoints.scss";
 @import "../styles/utils";
 
-
-
 .header {
   h1 {
-    @include autoFontSize(40);
+    @include autoFontSize(50);
     padding: 0;
     margin: 0;
 
@@ -16,6 +14,7 @@
   z-index: 100;
   flex-direction: row;
   justify-content: center;
+  min-height:50px;
 
   &__certification {
     display: flex;
@@ -52,20 +51,22 @@
 }
 
 .main {
-  display: flex;
-  flex-direction: column;
+  display:flex;
+  flex: 1;
+  flex-direction:column;
+  min-height: 100vh;
   align-items: center;
+  margin-bottom: 20px;
 }
 
 .footer {
-  position: sticky;
-  left: 0;
-  right: 0;
-  bottom: 0;
+  position: absolute;
+  width: 100%;
   display: flex;
   justify-content: center;
   flex-direction: row;
   border-top: 1px solid #eaeaea;
+
   div {
     padding: 20px;
   }
