--- a/ui/Form/signupForm.module.scss
+++ b/ui/Form/signupForm.module.scss
@@ -21,7 +21,8 @@
   }
 
   .errorMessage {
-    margin-bottom: 15px;
+    margin-top: 15px;
+    text-align: center;
   }
 button {
   margin-top: 20px;
