--- a/ui/Navigation/Navigation.module.scss
+++ b/ui/Navigation/Navigation.module.scss
@@ -104,9 +104,14 @@
 }
 
 .navItem {
+  text-align: center;
   width: 100%;
   padding: 10px;
   list-style-type: none;
+
+  a {
+    padding: 10px 100px;
+  }
 
   &:hover {
     display: block;
