--- a/styles/animations.scss
+++ b/styles/animations.scss
@@ -13,3 +13,38 @@
     transform: translateY(-16px);
   }
 }
+
+@keyframes colorshow {
+  0% { fill: darkblue;
+    opacity: 1;}
+  20% { fill: orangered;
+    opacity: 0.6;}
+  40% { fill: purple;
+    opacity: 0.7}
+  80% { fill: #FD367E;
+    opacity: 0.8;}
+  100% { fill: darkblue;
+    opacity: 1;}
+}
+
+@mixin logoLotusAnimation($animation-iteration-count) {
+  :global(.logo-only_svg__lotus-leftmost) {
+    animation: colorshow 10s 0s ease-in-out $animation-iteration-count;
+  }
+
+  :global(.logo-only_svg__lotus-left) {
+    animation: colorshow 10s 0.5s ease-in-out $animation-iteration-count;
+  }
+
+  :global(.logo-only_svg__lotus-middle) {
+    animation: colorshow 10s 1s ease-in-out $animation-iteration-count;
+  }
+
+  :global(.logo-only_svg__lotus-right) {
+    animation: colorshow 10s 1.5s ease-in-out $animation-iteration-count;
+  }
+
+  :global(.logo-only_svg__lotus-rightmost) {
+    animation: colorshow 10s 2s ease-in-out $animation-iteration-count;
+  }
+}
