--- a/ui/Button.module.scss
+++ b/ui/Button.module.scss
@@ -1,7 +1,7 @@
 @import "styles/utils";
 @import "styles/breakpoints";
 
-.enquiryButton {
+.navigationButton {
   @include autoFontSize(15);
   &:hover {
     background-image: $glow-bg;
@@ -10,15 +10,20 @@
   font-weight: bolder;
   text-transform: capitalize;
   z-index: 100;
-  margin-top:10px;
   right: 20px;
+  margin-right: 5px;
   border: 2px solid black;
   background-color: white;
   border-radius: 100px;
   padding: 5px;
+
   cursor: pointer;
   outline: inherit;
+
   a {
-    padding:20px;
+    padding:10px;
+    @include tablet-up {
+      padding:20px;
+    }
   }
 }
