--- a/ui/YogshalaFancyLogo.module.scss
+++ b/ui/YogshalaFancyLogo.module.scss
@@ -1,43 +1,21 @@
 @import "../styles/breakpoints";
 @import "../styles/utils";
-
-@keyframes colorshow {
-  0% { fill: darkblue;
-    opacity: 1;}
-  20% { fill: orangered;
-    opacity: 0.6;}
-  40% { fill: purple;
-  opacity: 0.7}
-  80% { fill: #FD367E;
-    opacity: 0.8;}
-  100% { fill: darkblue;
-    opacity: 1;}
-}
+@import "../styles/animations";
 
 .fancyLogo {
   font-family: GeomaRegularDemo, 'Geoma Regular Demo', serif;
   padding-top: 10px;
 
+  &__mainLogo {
+    width: 100px;
+
+    @include tablet-up{
+      width: inherit;
+      align-self: inherit;
+    }
+  }
   &__mainLogo:hover {
-    :global(.logo-only_svg__lotus-leftmost) {
-      animation: colorshow 10s 0s ease-in-out infinite;
-    }
-
-    :global(.logo-only_svg__lotus-left) {
-      animation: colorshow 10s 0.5s ease-in-out infinite;
-    }
-
-    :global(.logo-only_svg__lotus-middle) {
-      animation: colorshow 10s 1s ease-in-out infinite;
-    }
-
-    :global(.logo-only_svg__lotus-right) {
-      animation: colorshow 10s 1.5s ease-in-out infinite;
-    }
-
-    :global(.logo-only_svg__lotus-rightmost) {
-      animation: colorshow 10s 2s ease-in-out infinite;
-    }
+    @include logoLotusAnimation(infinite);
   }
 
   display: flex;
@@ -51,17 +29,33 @@
     justify-content: center;
 
     &__veda {
-      width: 55px;
+      display: none;
+      width: 30px;
+      @include tablet-up {
+        display: block;
+        width: 55px;
+      }
       margin-right: 5px;
     }
     &__yogshala {
-      width: 100px;
+      display: none;
+      width: 50px;
+      @include tablet-up {
+        display: block;
+        width: 100px;
+      }
     }
   }
 
   &__companyTag {
+    display: none;
     align-self: center;
     margin-top: 5px;
-    width: 150px;
+    width: 50px;
+    @include tablet-up {
+      display: block;
+      width: 150px;
+    }
+
   }
 }
