add social media icons and fix header in our teachers section

--- a/styles/Layout.module.scss
+++ b/styles/Layout.module.scss
@@ -161,17 +161,40 @@
   position: absolute;
   width: 100%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  flex-direction: row;
   border-top: 1px solid #eaeaea;
 
-  div {
-    padding: 20px;
-  }
-  a {
+  &__links {
     display: flex;
+    flex-direction: row;
+    justify-content: center;
+    div {
+      padding: 20px;
+    }
+  }
+
+  &__socialMediaLinks {
+    padding-top: 10px;
+    display: flex;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
-    flex-grow: 1;
+    flex-wrap: wrap;
+
+    &__twitter {
+      @include autoFontSize(38);
+      margin-bottom: 5px;
+    }
+
+    svg {
+      width: 32px;
+      height: 32px;
+    }
+
+    a {
+      margin-left: 5px;
+      margin-right: 5px;
+    }
   }
 }
