--- a/ui/Navigation/Navigation.module.scss
+++ b/ui/Navigation/Navigation.module.scss
@@ -106,11 +106,11 @@
   justify-content:center ;
   text-align: center;
   width: 100%;
-  padding: 20px;
+
   list-style-type: none;
 
   &__button {
-    padding: 15px 25px;
+    padding: 25px 0;
     width: 100%;
 
   }
