--- a/ui/Navigation/Navigation.module.scss
+++ b/ui/Navigation/Navigation.module.scss
@@ -109,19 +109,8 @@
 
   list-style-type: none;
 
-  &__button {
-    padding: 25px 0;
-    width: 100%;
-
-  }
-  &__root {
-    a {
-      @include autoFontSize(25);
-    }
-  }
-
-  button {
-    padding: inherit;
+  a {
+    padding: 20px;
     @include autoFontSize(17);
     font-weight: bolder;
     width: 100%;
@@ -129,9 +118,12 @@
     background-color: initial;
     border: none;
     cursor: pointer;
+    display: block;
+  }
 
+  &__root {
     a {
-      display: block;
+      @include autoFontSize(25);
     }
   }
 
