--- a/styles/colours.scss
+++ b/styles/colours.scss
@@ -7,3 +7,6 @@ $brick: #A1310B;
 $font-color: #17224A;
 $font-color-secondary: #122954;
 $disabled:  #f0f0f0;
+$yoga-red: #a00013;
+$yoga-brown: #702c1f;
+$yoga-yellow: #d6910c;
