update links and link each teacher's social media

--- a/ui/ProfileBlock.module.scss
+++ b/ui/ProfileBlock.module.scss
@@ -22,11 +22,24 @@
     display: flex;
     flex-direction: column;
   }
+
   &__paragraphs {
     padding:20px;
     align-self: baseline;
   }
 
+  &__socialMediaLinks {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding: 10px 20px;
+    svg {
+      width: 30px;
+    }
+    a {
+      padding-right: 10px;
+    }
+  }
   &__image {
     align-self: center;
     border-radius: 100%;
