--- a/styles/Layout.module.scss
+++ b/styles/Layout.module.scss
@@ -169,7 +169,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    div {
+    a {
       padding: 20px;
     }
   }
