--- a/ui/Form/loginForm.module.scss
+++ b/ui/Form/loginForm.module.scss
@@ -17,14 +17,19 @@
     @include formGroup();
   }
 
-  .forgotLink {
-    align-self: flex-end;
-    text-align: right;
-    @include autoFontSize(13);
-    padding: 20px;
-    text-decoration-color: $font-color-secondary;
-    text-decoration: underline;
+  .additionalLinks {
+    display: flex;
+    justify-content: space-between;
+    &__forgotLink, &__signupLink {
+      align-self: flex-end;
+      text-align: right;
+      @include autoFontSize(20);
+      padding: 20px;
+      text-decoration-color: $font-color-secondary;
+      text-decoration: underline;
+    }
   }
+
   button {
     @include autoFontSize(16);
     &:hover {
