--- a/pages/resetPassword.module.scss
+++ b/pages/resetPassword.module.scss
@@ -1,5 +1,5 @@
-@import "styles/colours.scss";
-@import "styles/utils.scss";
+@import "styles/colours";
+@import "styles/utils";
 
 .resetPasswordContainer {
   display: flex;
